--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,4 +120,4 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          tags: username/taski_gateway:latest
+          tags: alisacalm/taski_gateway:latest
