--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,12 @@ services:
   frontend:
     env_file: .env
     build: ./frontend/
+    command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
-    command: cp -r /app/build/. /frontend_static/
   gateway:
     build: ./gateway/
+    env_file: .env
     volumes:
       - static:/staticfiles
     ports:
