--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,20 +11,20 @@ services:
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
-    image: alisacalm/taski_backend
+    image: alisacalm/taski_backend:latest
     env_file: .env
     depends_on:
       - db
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: alisacalm/taski_frontend
+    image: alisacalm/taski_frontend:latest
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: alisacalm/taski_gateway
+    image: alisacalm/taski_gateway:latest
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
